# core.dashboards_store.snowflake

./: .gitignore  CHANGELOG.md  README.md  dbt_project.yml  profiles-sample.yml  profiles.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: anomalie.md  config.yml  demande_fonctionnalite.md  question.md
.github/workflows/: release.yml
macros/introspection/: schema.yml  stamper.sql
models/: smoketest.sql
tooling/: __init__.py
tooling/docs/: .gitignore  README.md  nuxt.config.ts  package-lock.json  package.json
tooling/docs/app/assets/css/: main.css
tooling/docs/app/components/: AppFooterLeft.vue  AppHeaderCTA.vue  AppHeaderLogo.vue  AuthorBadge.vue  CommandCard.vue  ContractTable.vue  DocsLogo.vue  LandingHome.vue  PageMetadata.vue  RepoPath.vue  UpdatedAtBadge.vue
tooling/docs/app/layouts/: default.vue
tooling/docs/content/fr/: index.md
tooling/docs/content/fr/01-demarrage/: .navigation.yml  01-presentation.md  03-pourquoi-ces-outils.md  04-parcours-recommande.md
tooling/docs/content/fr/02-dbt/: .navigation.yml  01-presentation-dbt.md  02-profils-cibles-et-projets.md  03-commandes-de-base.md  04-seeds-models-tests.md  05-selection-tags-et-dependances.md
tooling/docs/content/fr/03-comptoir-architecture/: .navigation.yml  01-concept-du-store.md  03-template-cookiecutter.md  04-interfaces.md  07-overriding.md  08-overrider-un-modele.md  09-seeds-de-configuration.md  11-regles-affaires-locales.md
tooling/docs/content/fr/03-le-comptoir/: .navigation.yml
tooling/docs/content/fr/04-installation/: 01-wsl2.md  04-installer-les-dependances.md  05-configurer-profiles-yml.md  07-executer-un-premier-modele.md  08-problemes-courants.md  09-snowflake-environnements.md  10-snowflake-roles-et-entrepots.md  11-snowflake-bases-schemas-et-droits.md  12-snowflake-authentification-et-profils-dbt.md  13-snowflake-couts-et-controles.md
tooling/docs/content/fr/05-utilisation/: 04-overrider-un-modele.md  05-ajouter-des-tests.md
tooling/docs/content/fr/06-creer-tableau-de-bord/: 02-projet-fp.md  (+3 more)
tooling/docs/public/mcp/: docs-mcp.json
tooling/release/templates/: CHANGELOG.md.j2
tooling/scripts/: spin_template.py
tooling/template/: cookiecutter.json
tooling/template/{{ cookiecutter.css_short_name + '.dashboards_store.snowflake' }}/: .gitignore  dbt_project.yml  packages.yml  profiles-sample.yml  readme.md  {{ 'profiles.yml' }}
(+98 files in other folders)
