[project]
name = "core.dashboards_store.snowflake"
version = "0.0.1"
description = "Code commun du comptoir de tableaux de bords pour les données de Snowfalke"
authors = [
    {name = "hugo.juhel@kyogo.ca"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-core (>=1.11.8,<2.0.0)",
    "dbt-snowflake (>=1.11.4,<2.0.0)",
    "shandy-sqlfmt (>=0.29.0,<0.30.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "cookiecutter (>=2.6.0,<3.0.0)"
]

[project.scripts]
spin_template = "tooling.scripts.spin_template:main"

[tool.poetry]
packages = [
    { include = "tooling" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "dbt_project.yml:version",
    "pyproject.toml:project:version",
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
changelog_sections = ["feature", "fix", "breaking"]
changelog_scope = "all"
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.version]
pattern = "v(?P<major>0|[1-9]\\d*)\\.(?P<minor>0|[1-9]\\d*)\\.(?P<patch>0|[1-9]\\d*)(?:-(?P<prerelease>(?:0|[1-9]\\d*|\\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\\.(?:0|[1-9]\\d*|\\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\\+(?P<buildmetadata>[0-9a-zA-Z-]+(?:\\.[0-9a-zA-Z-]+)*))?"

[tool.semantic_release.changelog]
template_dir = "tooling/release/templates"
mode = "init"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.master]
match = "(main|master)"
prerelease = false
strict = 1

[tool.sqlfmt]
line_length = 88
quiet=true
reset_cache=true
exclude=[
    "target/**/*",
    "dbt_packages/**/*",
    "tooling/templates/**/*"
]
